--- a/web/react-front/src/pages/Home.css
+++ b/web/react-front/src/pages/Home.css
@@ -1,15 +1,12 @@
-/* .home-container {
-    height: 100vh;
+.home-container {
+    height: 100vH;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    object-fit: contain;
+    box-shadow: inset 0 0 0 1000px rba(0,0,0,0.2);
 }
-
-video {
-    width: 10;
-    height: 10;
-} */
 
 video {
     object-fit: cover;
@@ -17,4 +14,9 @@ video {
     height: 100%;
     position: fixed;
     z-index: -1;
+}
+
+h1 {
+    position: center;    
+    color: white;
 }
