--- a/web/react-front/src/App.css
+++ b/web/react-front/src/App.css
@@ -38,5 +38,7 @@
 } */
 
 body {
-  background-color: #1D1D1D;
+  /* background-color: #1D1D1D; */  
+  background-color: #000000;
+  background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);
 }
