--- a/web/react-front/src/pages/Treneriai.css
+++ b/web/react-front/src/pages/Treneriai.css
@@ -1,10 +1,12 @@
 .treneriai-div {
     margin: auto;
     width: 100%;
+    text-align: center;    
     /* border-color: red;
     border-width: 10px;
     border-style: solid; */
 }
+
 
 /* .centruoti{
     position: relative;
