--- a/web/react-front/src/pages/Home.css
+++ b/web/react-front/src/pages/Home.css
@@ -1,5 +1,13 @@
+/* .white-div { 
+    width:100%;
+    margin-top: 70vH;
+    height:100vH;
+    border:5px solid red;
+    background-color: #343a40;
+} */
+
 .home-container {
-    height: 100vH;
+    /* height: 100vH; */
     width: 100%;
     display: flex;
     flex-direction: column;
