--- a/web/react-front/src/App.css
+++ b/web/react-front/src/App.css
@@ -39,6 +39,7 @@
 
 body {
   /* background-color: #1D1D1D; */  
+  height: 100%;
   background-color: #000000;
-  background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);
+  background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);  
 }
