--- a/web/react-front/src/pages/Profile.css
+++ b/web/react-front/src/pages/Profile.css
@@ -14,6 +14,7 @@
 .first-profile-div {
     background-color: #861657;
     background-image: linear-gradient(326deg, #861657 0%, #ffa69e 74%);
+    min-height: 70vh;
 }
 
 .second-profile-div {
@@ -24,9 +25,17 @@
 .prof-img {
     display:block;
     margin:auto;
+    width: 300px;
+    height: 300px;    
 }
 
 .input-center {
     text-align: center;
     margin:auto;
+}
+
+.keisti-mygtukas {
+    position: absolute;
+    bottom: 2em;
+    right: 2em;
 }
