--- a/web/react-front/src/pages/Profile.css
+++ b/web/react-front/src/pages/Profile.css
@@ -25,8 +25,16 @@
 .prof-img {
     display:block;
     margin:auto;
-    width: 300px;
-    height: 300px;    
+    /* width: 300px;
+    height: 300px;     */
+    width: 100%;
+    height: auto;    
+    transform:scale(1);
+    transition: transform 0.5s ease;
+}
+
+.prof-img:hover {
+    transform:scale(1.2);
 }
 
 .input-center {
