--- a/web/react-front/src/pages/Profile.css
+++ b/web/react-front/src/pages/Profile.css
@@ -25,10 +25,12 @@
 .prof-img {
     display:block;
     margin:auto;
+    width: 15em;
+    height: 15em;  
     /* width: 300px;
     height: 300px;     */
-    width: 70%;
-    height: auto;    
+    /* width: 70%;
+    height: auto;     */
     transform:scale(1);
     transition: transform 0.5s ease;
 }
